Fix(ex_02): Replace Animal constructor in Dog And Cat Class to AAnima; Fix(ex_02): Now compile with -std=c++98

--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,5 +1,5 @@
 NAME = ABSTRACT-ANIMALS-BRAINS
-CFLAGS = -Wall -Wextra -Werror -g3 -MD
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -g3 -MD
 RM = @rm -rf
 CC = @c++
 DIR = @mkdir -p
